# vouch-rust

./: Cargo.toml
docs/plans/: 2026-04-30-vouch-rust-rewrite.md
docs/specs/: 2026-04-30-vouch-rust-rewrite.md
src/: cache.rs  cmux.rs  diff_input.rs  feedback.rs  lib.rs  llm.rs  main.rs  models.rs  parser.rs  tui.rs
tests/: integration.rs
tests/fixtures/: diverse.diff  sample.diff
