[package]
name = "vouch"
version = "0.1.0"
edition = "2021"
description = "Closed-loop AI diff reviewer"
license = "MIT"
authors = ["youngjin.lee"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
which = "7"
regex = "1"

[dev-dependencies]
tempfile = "3"
